[gd_scene load_steps=12 format=3 uid="uid://cqph3dtg1c7uw"]

[ext_resource type="Script" path="res://Scenes/GameMenus/MainMenu/MainMenu.gd" id="1_2vqfd"]
[ext_resource type="PackedScene" uid="uid://bq7uyf5bvh5ye" path="res://Scenes/GameMenus/SettingsMenu/SettingsMenu.tscn" id="2_00gnl"]
[ext_resource type="PackedScene" uid="uid://dlyp6saxvnxs8" path="res://Scenes/GameMenus/MapEditorMenu/MapEditor.tscn" id="2_dhifx"]
[ext_resource type="PackedScene" uid="uid://45xywfehll3n" path="res://Scenes/GameMenus/SinglePlayerMenu/singelplayerMenu.tscn" id="2_y4eau"]
[ext_resource type="Script" path="res://Scripts/GUI/PositivButton.gd" id="3_2sh1y"]
[ext_resource type="Script" path="res://Scripts/GUI/NormalButton.gd" id="3_i1v68"]
[ext_resource type="Script" path="res://Scripts/GUI/NegativButton.gd" id="5_75rpu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oqp70"]
bg_color = Color(0.635294, 0.92549, 0.67451, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gur2n"]
bg_color = Color(0.2428, 0.813678, 0.382204, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rkggp"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jgfnt"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2vqfd")
mapEditor_packed_scene = ExtResource("2_dhifx")
settings_packed_scene = ExtResource("2_00gnl")
singleplayer_packed_scene = ExtResource("2_y4eau")

[node name="BackgroundTextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="MenuContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleMargin" type="MarginContainer" parent="MenuContainer"]
layout_mode = 2
theme_override_constants/margin_top = 32

[node name="TitleContainer" type="Control" parent="MenuContainer/TitleMargin"]
layout_mode = 2
mouse_filter = 2

[node name="TitleLabel" type="Label" parent="MenuContainer/TitleMargin/TitleContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 67.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "Title"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubTitleMargin" type="MarginContainer" parent="MenuContainer"]
layout_mode = 2
theme_override_constants/margin_top = 96

[node name="SubTitleContainer" type="Control" parent="MenuContainer/SubTitleMargin"]
layout_mode = 2
mouse_filter = 2

[node name="SubTitleLabel" type="Label" parent="MenuContainer/SubTitleMargin/SubTitleContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 34.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "Subtitle"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuButtonsMargin" type="MarginContainer" parent="MenuContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="MenuButtonsBoxContainer" type="BoxContainer" parent="MenuContainer/MenuButtonsMargin"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 16
alignment = 1
vertical = true

[node name="ContinueButtonContainer" type="BoxContainer" parent="MenuContainer/MenuButtonsMargin/MenuButtonsBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1
vertical = true

[node name="ContinueButton" type="Button" parent="MenuContainer/MenuButtonsMargin/MenuButtonsBoxContainer/ContinueButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 40)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.197937, 0.197937, 0.197937, 1)
theme_override_colors/font_color = Color(0.194349, 0.194349, 0.194349, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_oqp70")
theme_override_styles/normal = SubResource("StyleBoxFlat_gur2n")
text = "Continue"
script = ExtResource("3_2sh1y")

[node name="Container" type="Control" parent="MenuContainer/MenuButtonsMargin/MenuButtonsBoxContainer/ContinueButtonContainer"]
layout_mode = 2

[node name="SingleplayerButton" type="Button" parent="MenuContainer/MenuButtonsMargin/MenuButtonsBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 40)
layout_mode = 2
text = "SINGELPLAYER_MENU"
script = ExtResource("3_i1v68")

[node name="MultiplayerButton" type="Button" parent="MenuContainer/MenuButtonsMargin/MenuButtonsBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 40)
layout_mode = 2
text = "MULTIPLAYER_MENU"
script = ExtResource("3_i1v68")

[node name="WikiButton" type="Button" parent="MenuContainer/MenuButtonsMargin/MenuButtonsBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 40)
layout_mode = 2
text = "WIKI_MENU"
script = ExtResource("3_i1v68")

[node name="MapEditorButton" type="Button" parent="MenuContainer/MenuButtonsMargin/MenuButtonsBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 40)
layout_mode = 2
text = "MAP_EDITOR_MENU"
script = ExtResource("3_i1v68")

[node name="SettingsButton" type="Button" parent="MenuContainer/MenuButtonsMargin/MenuButtonsBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 40)
layout_mode = 2
text = "SETTINGS_MENU"
script = ExtResource("3_i1v68")

[node name="ModsButton" type="Button" parent="MenuContainer/MenuButtonsMargin/MenuButtonsBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 40)
layout_mode = 2
text = "MODS_MENU
"
script = ExtResource("3_i1v68")

[node name="AboutButton" type="Button" parent="MenuContainer/MenuButtonsMargin/MenuButtonsBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 40)
layout_mode = 2
text = "ABOUT_MENU"
script = ExtResource("3_i1v68")

[node name="ExitButton" type="Button" parent="MenuContainer/MenuButtonsMargin/MenuButtonsBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "GENERAL_EXIT"
script = ExtResource("5_75rpu")

[node name="SingleplayerContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MultiplayerContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 32

[node name="WikiContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 32

[node name="MapEditorContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 32

[node name="SettingsContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ModsContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 32

[node name="AboutContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 32

[node name="FlowControlContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="FlowControl" type="Control" parent="FlowControlContainer"]
layout_mode = 2
mouse_filter = 2

[node name="VersionButton" type="Button" parent="FlowControlContainer/FlowControl"]
unique_name_in_owner = true
layout_mode = 1
offset_right = 76.0
offset_bottom = 31.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/focus = SubResource("StyleBoxFlat_rkggp")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_jgfnt")
theme_override_styles/disabled = SubResource("StyleBoxFlat_jgfnt")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_jgfnt")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_jgfnt")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_jgfnt")
theme_override_styles/hover = SubResource("StyleBoxFlat_jgfnt")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_jgfnt")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jgfnt")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_jgfnt")
theme_override_styles/normal = SubResource("StyleBoxFlat_jgfnt")
text = "VERSION"

[node name="LanguageSelection" type="OptionButton" parent="FlowControlContainer/FlowControl"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="BackButton" type="Button" parent="FlowControlContainer/FlowControl"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(62, 40)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 62.0
grow_vertical = 0
text = "GENERAL_BACK"
script = ExtResource("5_75rpu")

[connection signal="pressed" from="MenuContainer/MenuButtonsMargin/MenuButtonsBoxContainer/ContinueButtonContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="MenuContainer/MenuButtonsMargin/MenuButtonsBoxContainer/SingleplayerButton" to="." method="_on_singleplayer_button_pressed"]
[connection signal="pressed" from="MenuContainer/MenuButtonsMargin/MenuButtonsBoxContainer/MultiplayerButton" to="." method="_on_multiplayer_button_pressed"]
[connection signal="pressed" from="MenuContainer/MenuButtonsMargin/MenuButtonsBoxContainer/WikiButton" to="." method="_on_wiki_button_pressed"]
[connection signal="pressed" from="MenuContainer/MenuButtonsMargin/MenuButtonsBoxContainer/MapEditorButton" to="." method="_on_map_editor_button_pressed"]
[connection signal="pressed" from="MenuContainer/MenuButtonsMargin/MenuButtonsBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MenuContainer/MenuButtonsMargin/MenuButtonsBoxContainer/ModsButton" to="." method="_on_mods_button_pressed"]
[connection signal="pressed" from="MenuContainer/MenuButtonsMargin/MenuButtonsBoxContainer/AboutButton" to="." method="_on_about_button_pressed"]
[connection signal="pressed" from="MenuContainer/MenuButtonsMargin/MenuButtonsBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="item_selected" from="FlowControlContainer/FlowControl/LanguageSelection" to="." method="_on_language_selection_item_selected"]
[connection signal="pressed" from="FlowControlContainer/FlowControl/BackButton" to="." method="_on_back_button_pressed"]
